# alglib

./: .clang-format  .editorconfig  .gitignore  Cargo.toml  README.md  requirements.txt
alglib-data-struct/: Cargo.toml
alglib-data-struct/src/: graph.rs  lib.rs  list_graph.rs
alglib-set/: Cargo.toml
alglib-set/src/: fn_map.rs  fn_set.rs  index_map.rs  int_range.rs  map.rs  set.rs  singleton.rs  vec_map.rs
alglib-set/src/iter/: int_range_iter.rs  mapped_set_iter.rs
cpp/: .clang-format
cpp/test/graph/: generate.hpp
docs/: config.toml
docs/assets/: _custom.scss  _variables.scss  script.js
docs/content/: _index.md  policy.md  style.md
docs/content/algebra/: _index.md
docs/content/graph/: _index.md
docs/layouts/_default/: list.html
docs/layouts/partials/: github.html  kerning.html
docs/layouts/shortcodes/: cite.html  code.html  github.html  link.html  references.html
include/alglib/algebra/: matrix.hpp
include/alglib/graph/: bfs.hpp  eulerian_trail.hpp  graph.hpp  scc.hpp  tree.hpp  (+1 more)
numbered/: Cargo.toml
numbered/src/: fn_map.rs  fn_set.rs  index_map.rs  int_range.rs  iter.rs  lib.rs  map.rs  map_set.rs  mapped_set.rs  numbered.rs  ordered_set.rs  set.rs  singleton.rs  vec_map.rs
numbered/src/iter/: int_range_iter.rs  map_set_iter.rs  mapped_set_iter.rs
numbering/: Cargo.toml
numbering/src/: id_num.rs  int_range.rs  iter.rs  lib.rs  map_num.rs  map_set.rs  numbering.rs  ordered_set.rs  range.rs  singleton.rs  unit_num.rs
test/graph/: bfs.test.cpp  generate.hpp  topological_sort_kahn.test.cpp  topological_sort_tarjan.test.cpp
(+43 files in other folders)
