[package]
name = "alglib-data-struct"
version = "0.1.0"
authors = ["Taihei Oki <t.oki.natrium@gmail.com>"]
description = "Library for data structures."
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/natrium11321/alglib"
workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alglib-set = { path = "../alglib-set" }
